--- a/laiqu/src/main/res/layout/activity_kitchen_details_layout.xml
+++ b/laiqu/src/main/res/layout/activity_kitchen_details_layout.xml
@@ -384,17 +384,71 @@
                 android:layout_height="@dimen/dimen_800px"
                 android:background="@color/white"
                 android:orientation="vertical">
+
                 <TextView
+                    android:id="@+id/kitchen_details_a_set_meal"
                     android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:contentDescription="A套餐"
                     android:text="@string/kitchen_set_meal_a"
-                    android:textSize="@dimen/dimen_60px"
                     android:textColor="@color/color_E2666A"
-                    android:id="@+id/kitchen_details_a_set_meal"
-                    android:layout_height="match_parent" />
+                    android:textSize="@dimen/dimen_60px" />
 
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_180px"
+        android:layout_gravity="bottom"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/kitchen_details_attention"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2"
+            android:background="@drawable/fragment_person_mine_dinner_select"
+            android:clickable="true"
+            android:contentDescription="关注"
+            android:drawablePadding="@dimen/dimen_20px"
+            android:drawableTop="@mipmap/ic_attention"
+            android:gravity="center"
+            android:text="@string/attention"
+            android:textColor="@color/textGrayDeep"
+            android:textSize="@dimen/dimen_50px" />
+
+        <TextView
+            android:id="@+id/kitchen_details_information"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2"
+            android:background="@drawable/fragment_person_mine_dinner_select"
+            android:clickable="true"
+            android:contentDescription="咨询"
+            android:drawablePadding="@dimen/dimen_20px"
+            android:drawableTop="@mipmap/ic_information"
+            android:gravity="center"
+            android:text="@string/information"
+            android:textColor="@color/textGrayDeep"
+            android:textSize="@dimen/dimen_50px" />
+
+
+        <TextView
+            android:id="@+id/kitchen_details_immediately_reserve"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_150px"
+            android:layout_weight="5"
+            android:background="@drawable/taste_preference_confirm_select"
+            android:clickable="true"
+            android:gravity="center"
+            android:text="@string/immediately_reserve"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_50px" />
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
