--- a/fanqu/src/main/res/layout/activity_mine_integral_layout.xml
+++ b/fanqu/src/main/res/layout/activity_mine_integral_layout.xml
@@ -78,6 +78,38 @@
                     android:textSize="@dimen/dimen_87px" />
             </LinearLayout>
 
+
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <com.shizhefei.view.indicator.FixedIndicatorView
+                android:id="@+id/mine_integral_viewpage_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_150px"
+                android:layout_marginTop="@dimen/dimen_40px"
+                android:background="@color/white"
+                android:gravity="center"
+                android:layout_marginBottom="@dimen/dimen_5px" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_5px"
+                android:layout_gravity="bottom"
+                android:background="@color/edit_publis_line_color">
+
+            </View>
+
+        </RelativeLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/mine_integral_viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:background="@color/white" />
     </LinearLayout>
 </LinearLayout>
