--- a/fanqu/src/main/res/values/dimens.xml
+++ b/fanqu/src/main/res/values/dimens.xml
@@ -173,5 +173,6 @@
     <dimen name="dimen_148px">148px</dimen>
     <dimen name="dimen_182px">182px</dimen>
     <dimen name="dimen_366px">366px</dimen>
+    <dimen name="dimen_145px">145px</dimen>
 
 </resources>
